Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -3,8 +3,6 @@
    =============================== */
 @import "@{templateCommon}/basekit-bootstrap.less";
 
-@import "@{templateCommon}/basekit-bootstrap.less";
-
 /* ===============================
    TEMPLATE CSS
    =============================== */
@@ -267,7 +265,6 @@ footer.bk-footer p {
 }
 
 .widget.navigation ul li {
-  float: left;
   display: block;
   padding-right: 40px;
 }
@@ -293,9 +290,8 @@ footer.bk-footer p {
 
 .widget.extendednavigation {
   position: relative;
-  max-width: 960px;
-  margin:0px auto;
-  display:table;
+  width: 80%;
+  float: left;
 }
 
 .widget.extendednavigation a.pull {
